# slimevr-cli

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT
src/: main.rs
